style.css
body,
html {
  margin: 0;
  padding: 0;
}
body {
  font-family: system-ui;
  background: #fff;
  color: black;
}

.hide {
  display: none;
}
.show {
  display: block;
}
img {
  width: 100%;
  height: auto;
}
#identity-container {
  /* height: 1000vh; */
}
#identity {
  position: fixed;
  top: 0;
  min-width: 100%;
  min-height: 100vh;
}

